bridge/base/js-server-deployment.yaml
#! js-server-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: js-server
    namespace: trello-kopya
    labels:
        com.docker.compose.project: trello-kopya
        com.docker.compose.service: js-server
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: trello-kopya
            com.docker.compose.service: js-server
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: trello-kopya
                com.docker.compose.service: js-server
                com.docker.compose.network.appnet: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: js-server
                  image: trello-kopya-js-server
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: js-server-3000
                      containerPort: 3000
