bridge/base/js-client-expose.yaml
#! js-client-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: js-client
    namespace: trello-kopya
    labels:
        com.docker.compose.project: trello-kopya
        com.docker.compose.service: js-client
spec:
    selector:
        com.docker.compose.project: trello-kopya
        com.docker.compose.service: js-client
    ports:
        - name: js-client-8080
          port: 8080
          targetPort: js-client-8080
