bridge/base/js-server-expose.yaml
#! js-server-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: js-server
    namespace: trello-kopya
    labels:
        com.docker.compose.project: trello-kopya
        com.docker.compose.service: js-server
spec:
    selector:
        com.docker.compose.project: trello-kopya
        com.docker.compose.service: js-server
    ports:
        - name: js-server-3000
          port: 3000
          targetPort: js-server-3000
