bridge/base/mysql-db-service.yaml
#! mysql-db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mysql-db-published
    namespace: trello-kopya
    labels:
        com.docker.compose.project: trello-kopya
        com.docker.compose.service: mysql-db
spec:
    selector:
        com.docker.compose.project: trello-kopya
        com.docker.compose.service: mysql-db
    ports:
        - name: mysql-db-3306
          port: 3306
          protocol: TCP
          targetPort: mysql-db-3306
