bridge/base/appnet-network-policy.yaml
#! appnet-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: appnet-network-policy
    namespace: trello-kopya
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.appnet: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.appnet: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.appnet: "true"
